--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- EN: Inter, KH: Kantumruy Pro, CN: Noto Serif SC -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Kantumruy+Pro:wght@300;400;600&family=Noto+Serif+SC:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="icon" href="./src/assets/logo.png" />
+  <link rel="icon" href="public/assets/logo.png" />
 </head>
 <body class="min-h-screen bg-stone-50 text-stone-900">
 <div id="root"></div>
