--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="km">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cambodia Coffee</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cambodia Coffee</title>
 
-  <!-- EN: Inter, KH: Kantumruy Pro, CN: Noto Serif SC -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Kantumruy+Pro:wght@300;400;600&family=Noto+Serif+SC:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="icon" href="https://res.cloudinary.com/dayrc0f7r/image/upload/v1758097355/cambodiacoffeelogo_pmvyza.png" />
+    <!-- Performance: preconnect & dns-prefetch for Cloudinary assets -->
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <link rel="dns-prefetch" href="https://res.cloudinary.com">
+
+    <!-- EN: Inter, KH: Kantumruy Pro, CN: Noto Serif SC -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Kantumruy+Pro:wght@300;400;600&family=Noto+Serif+SC:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://res.cloudinary.com/dayrc0f7r/image/upload/v1758097355/cambodiacoffeelogo_pmvyza.png" />
 </head>
 <body class="min-h-screen bg-stone-50 text-stone-900">
 <div id="root"></div>
